# Deepagent-research-context-engineering

./: .gitignore  Context_Engineering_Research.ipynb  DeepAgent_research.ipynb  DeepAgents_Technical_Guide.md  README.md  notes.md  pyproject.toml  rig_deepagents_gap_plan.md  task_plan.md
context_engineering_research_agent/: __init__.py  agent.py
context_engineering_research_agent/backends/: __init__.py  docker_sandbox.py  docker_session.py  docker_shared.py  pyodide_sandbox.py  workspace_protocol.py
context_engineering_research_agent/context_strategies/: __init__.py  caching.py  caching_telemetry.py  isolation.py  offloading.py  reduction.py  retrieval.py
context_engineering_research_agent/research/: __init__.py  agent.py
context_engineering_research_agent/skills/: __init__.py  load.py  middleware.py
docs/plans/: 2025-12-31-rig-deepagents.md  2026-01-01-rig-deepagents-fixes.md  2026-01-01-rig-deepagents-phase5-6.md  2026-01-02-pregel-mermaid-visualization-design.md
research_agent/: agent.py  prompts.py  tools.py
research_agent/researcher/: __init__.py  agent.py
research_agent/skills/: __init__.py  load.py  middleware.py
research_agent/subagents/: __init__.py  definitions.py  registry.py
research_workspace/: final_report.md
rust-research-agent/: Cargo.toml  PROJECT.md  README.md
rust-research-agent/crates/rig-deepagents/: Cargo.toml
rust-research-agent/crates/rig-deepagents/docs/diagrams/: node_kinds.mmd  research_workflow_with_state.mmd  simple_chain.mmd
rust-research-agent/crates/rig-deepagents/src/: config.rs  error.rs  executor.rs  lib.rs
rust-research-agent/crates/rig-deepagents/src/backends/: composite.rs  filesystem.rs  memory.rs  path_utils.rs  protocol.rs
rust-research-agent/crates/rig-deepagents/src/compat/: rig_agent_adapter.rs  rig_tool_adapter.rs
rust-research-agent/crates/rig-deepagents/src/llm/: anthropic.rs  config.rs  message.rs  mod.rs  openai.rs  provider.rs
rust-research-agent/crates/rig-deepagents/src/middleware/: mod.rs  patch_tool_calls.rs  stack.rs  traits.rs
rust-research-agent/crates/rig-deepagents/src/middleware/subagent/: executor.rs  mod.rs  state_isolation.rs  task_tool.rs
rust-research-agent/crates/rig-deepagents/src/middleware/summarization/: mod.rs  token_counter.rs  trigger.rs
rust-research-agent/crates/rig-deepagents/src/pregel/: mod.rs  runtime.rs  vertex.rs
rust-research-agent/crates/rig-deepagents/src/pregel/checkpoint/: mod.rs
rust-research-agent/crates/rig-deepagents/src/research/: state.rs  workflow.rs
rust-research-agent/crates/rig-deepagents/src/skills/: middleware.rs
rust-research-agent/crates/rig-deepagents/src/tools/: edit_file.rs  glob.rs  grep.rs  ls.rs  mod.rs  read_file.rs  task.rs  write_file.rs  write_todos.rs
rust-research-agent/crates/rig-deepagents/src/workflow/: compiled.rs
rust-research-agent/crates/rig-deepagents/src/workflow/vertices/: mod.rs  router.rs  subagent.rs
rust-research-agent/crates/rig-deepagents/tests/: e2e_llm_integration.rs  integration_research_workflow.rs
rust-research-agent/rig-deepagents/: Cargo.toml
rust-research-agent/rig-deepagents/benches/: middleware_benchmark.rs
rust-research-agent/rig-deepagents/docs/: CONSOLIDATION_ANALYSIS.md  DECISION_GUIDE.md  RIG_FRAMEWORK_REFERENCE.md
rust-research-agent/rig-deepagents/docs/plans/: 2026-01-03-p0-implementation-plan.md
rust-research-agent/rig-deepagents/src/: config.rs  error.rs  executor.rs  lib.rs  runtime.rs  state.rs  tool_result_eviction.rs
rust-research-agent/rig-deepagents/src/backends/: filesystem.rs  memory.rs  mod.rs  protocol.rs
rust-research-agent/rig-deepagents/src/compat/: mod.rs  rig_agent_adapter.rs  rig_tool_adapter.rs
rust-research-agent/rig-deepagents/src/llm/: config.rs  mod.rs
rust-research-agent/rig-deepagents/src/middleware/: filesystem.rs  human_in_the_loop.rs  mod.rs  stack.rs  todo_list.rs  traits.rs
rust-research-agent/rig-deepagents/src/middleware/subagent/: executor.rs  middleware.rs  spec.rs  task_tool.rs
rust-research-agent/rig-deepagents/src/middleware/summarization/: config.rs  mod.rs
rust-research-agent/rig-deepagents/src/pregel/: config.rs  error.rs  message.rs  mod.rs  runtime.rs  state.rs  visualization.rs
rust-research-agent/rig-deepagents/src/pregel/checkpoint/: file.rs  mod.rs  postgres.rs  redis.rs  sqlite.rs
rust-research-agent/rig-deepagents/src/research/: mod.rs  prompts.rs
rust-research-agent/rig-deepagents/src/skills/: loader.rs  middleware.rs  mod.rs  types.rs
rust-research-agent/rig-deepagents/src/tokenization/: mod.rs
rust-research-agent/rig-deepagents/src/tools/: edit_file.rs  glob.rs  grep.rs  ls.rs  mod.rs  read_file.rs  read_todos.rs  task.rs  tavily.rs  think.rs  write_file.rs  write_todos.rs
rust-research-agent/rig-deepagents/src/workflow/: compiled.rs  graph.rs  mod.rs  node.rs
rust-research-agent/rig-deepagents/src/workflow/vertices/: agent.rs  mod.rs  parallel.rs  router.rs  tool.rs
rust-research-agent/rig-deepagents/tests/: e2e_llm_integration.rs  integration_checkpointing.rs  integration_research_workflow.rs
rust-research-agent/src/: agent.rs  config.rs  main.rs  tools.rs
tests/backends/: conftest.py  test_docker_sandbox_integration.py
tests/context_engineering/: test_caching.py  test_integration.py  test_isolation.py  test_offloading.py  test_openrouter_models.py  test_reduction.py  test_retrieval.py
