[package]
name = "rig-deepagents"
version = "0.1.0"
edition = "2021"
description = "DeepAgents-style middleware system for Rig framework"
license = "MIT"

[features]
default = []
checkpointer-sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
checkpointer-redis = ["dep:redis"]
checkpointer-postgres = ["dep:sqlx"]
tokenizer-tiktoken = ["dep:tiktoken-rs"]

[dependencies]
rig-core = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"  # Added: needed for FilesystemBackend recursive traversal
futures = "0.3"  # Added: needed for LLMProvider streaming support

# Pregel runtime dependencies
num_cpus = "1"  # For default parallelism configuration
humantime-serde = "1"  # For Duration serialization in configs
zstd = "0.13"  # For checkpoint compression
regex = "1"
tiktoken-rs = { version = "0.5", optional = true }

# HTTP client for external API tools (Tavily, etc.)
reqwest = { version = "0.12", features = ["json"] }

# YAML parsing for skill frontmatter
serde_yaml = "0.9"

# Directory utilities for skill paths
dirs = "5"

# CLI argument parsing for skill-validator binary
clap = { version = "4", features = ["derive"] }

# Terminal output formatting for demo binary
colored = "2"           # 컬러 터미널 출력
console = "0.15"        # 터미널 유틸리티

# Tracing subscriber for demo logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite checkpointer (optional, requires checkpointer-sqlite feature)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tokio-rusqlite = { version = "0.5", optional = true }

# Redis checkpointer (optional, requires checkpointer-redis feature)
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"], optional = true }

# PostgreSQL checkpointer (optional, requires checkpointer-postgres feature)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

[dev-dependencies]
# OpenAI support is built into rig-core
tokio-test = "0.4"
dotenv = "0.15"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"  # For filesystem tests
static_assertions = "1"  # For compile-time trait checks
wiremock = "0.6"  # For HTTP mocking in tests

[[bench]]
name = "middleware_benchmark"
harness = false

[[bin]]
name = "skill-validator"
path = "src/bin/skill_validator.rs"

[[bin]]
name = "deepagent-demo"
path = "src/bin/deepagent_demo.rs"
