[package]
name = "rig-deepagents"
version = "0.1.0"
edition = "2021"
description = "DeepAgents-style middleware system for Rig framework"
license = "MIT"

[features]
default = []
checkpointer-sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
checkpointer-redis = []
checkpointer-postgres = []

[dependencies]
rig-core = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"  # Added: needed for FilesystemBackend recursive traversal
futures = "0.3"  # Added: needed for LLMProvider streaming support

# Pregel runtime dependencies
num_cpus = "1"  # For default parallelism configuration
humantime-serde = "1"  # For Duration serialization in configs
zstd = "0.13"  # For checkpoint compression
regex = "1"

# HTTP client for external API tools (Tavily, etc.)
reqwest = { version = "0.12", features = ["json"] }

# YAML parsing for skill frontmatter
serde_yaml = "0.9"

# Directory utilities for skill paths
dirs = "5"

# CLI argument parsing for skill-validator binary
clap = { version = "4", features = ["derive"] }

# SQLite checkpointer (optional, requires checkpointer-sqlite feature)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tokio-rusqlite = { version = "0.5", optional = true }

[dev-dependencies]
# OpenAI support is built into rig-core
tokio-test = "0.4"
dotenv = "0.15"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"  # For filesystem tests
static_assertions = "1"  # For compile-time trait checks
wiremock = "0.6"  # For HTTP mocking in tests

[[bench]]
name = "middleware_benchmark"
harness = false

[[bin]]
name = "skill-validator"
path = "src/bin/skill_validator.rs"
